k8s/prod/05-rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: grupo4-prod
  labels:
    app: rabbitmq
    app.kubernetes.io/part-of: smartgrid
    app.kubernetes.io/managed-by: grupo4
    entorno: prod
spec:
  replicas: 1
  strategy:
    type: Recreate                    
  selector:
    matchLabels: { app: rabbitmq }
  template:
    metadata:
      labels:
        app: rabbitmq
        app.kubernetes.io/part-of: smartgrid
        entorno: prod
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          ports:
            - { name: amqp, containerPort: 5672 }
            - { name: management, containerPort: 15672 }
          volumeMounts:
            - name: datos-rabbit
              mountPath: /var/lib/rabbitmq
          readinessProbe:
            exec: { command: ["rabbitmq-diagnostics","-q","ping"] }
            initialDelaySeconds: 15
            periodSeconds: 15
          livenessProbe:
            exec: { command: ["rabbitmq-diagnostics","-q","ping"] }
            initialDelaySeconds: 40
            periodSeconds: 30
          resources:
            requests: { cpu: 100m, memory: 256Mi }
            limits:   { cpu: 500m, memory: 512Mi }
      volumes:
        - name: datos-rabbit
          persistentVolumeClaim:
            claimName: rabbitmq-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: grupo4-prod
  labels: { app: rabbitmq, app.kubernetes.io/part-of: smartgrid, entorno: prod }
spec:
  type: ClusterIP
  selector: { app: rabbitmq }
  ports:
    - { name: amqp, port: 5672, targetPort: 5672 }
    - { name: management, port: 15672, targetPort: 15672 }
